[project]
name = "marimaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.2",
    "gdown>=5.2.0",
    "gunicorn>=23.0.0",
    "moviepy>=2.2.1",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "scikit-image>=0.24.0",
    "torch>=2.8.0",
    "waitress>=3.0.2",
]
